--- a/Wpf Practice/App.config
+++ b/Wpf Practice/App.config
@@ -1,6 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Wpf_Practice.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/></startup>
+    <userSettings>
+        <Wpf_Practice.Properties.Settings>
+            <setting name="City" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="Opacity" serializeAs="String">
+                <value>8</value>
+            </setting>
+        </Wpf_Practice.Properties.Settings>
+    </userSettings>
 </configuration>
