--- a/Wpf Practice/Wpf Practice.csproj
+++ b/Wpf Practice/Wpf Practice.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{2DA63616-0742-4FC3-88E4-157058753334}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Wpf_Practice</RootNamespace>
-    <AssemblyName>Wpf Practice</AssemblyName>
+    <AssemblyName>Clocker</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
